--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "uma api para quiz em flutter",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
