--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "API de perguntas e respostas para um aplicativo de quiz, desenvolvida em Node.js com Express.",
   "main": "index.js",
-  "author": "",
+  "author": "Guilherme Gonçalves de Freitas",
   "license": "Creative Commons Attribution 4.0 International",
   "dependencies": {
     "body-parser": "^1.20.2",
