--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "API Perguntas",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "API de perguntas e respostas para um aplicativo de quiz, desenvolvida em Node.js com Express.",
   "main": "index.js",
   "author": "Guilherme Gonçalves de Freitas",
-  "license": "Creative Commons Attribution 4.0 International",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
